new comment later

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">15,496</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">8,733</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">tests.SendProductToriendTestCase</td><td><a href="#m0">UserCanSearchForProductSuccessfully</a></td><td rowspan="1">1572124751039</td><td rowspan="1">5478</td></tr><tr class="passedeven"><td><a href="#m1">UserCanloginSuccessfully</a></td><td rowspan="1">1572124744466</td><td rowspan="1">6573</td></tr><tr class="passedeven"><td><a href="#m2">UserLogOut</a></td><td rowspan="1">1572124758843</td><td rowspan="1">1050</td></tr><tr class="passedeven"><td><a href="#m3">sendToFriend</a></td><td rowspan="1">1572124756517</td><td rowspan="1">2326</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.UserCanChangeCurrencyTestCase</td><td><a href="#m0">UserCanSearchForProductSuccessfully</a></td><td rowspan="1">1572128421872</td><td rowspan="1">7119</td></tr><tr class="passedeven"><td><a href="#m1">UserChangeCurrency</a></td><td rowspan="1">1572128429007</td><td rowspan="1">1567</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.SendProductToriendTestCase#UserCanSearchForProductSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.SendProductToriendTestCase#UserCanloginSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.SendProductToriendTestCase#UserLogOut</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.SendProductToriendTestCase#sendToFriend</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.UserCanChangeCurrencyTestCase#UserCanSearchForProductSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.UserCanChangeCurrencyTestCase#UserChangeCurrency</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
