--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:18:40</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&gt;&gt;Startdriver</td> 
+<tr bgcolor="e8a876">  <td>19/10/27 00:20:09</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&gt;&gt;Startdriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:19:20</td>   <td>39853</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&lt;&lt;StopDriver</td> 
+<tr bgcolor="e8a876">  <td>19/10/27 00:20:30</td>   <td>21046</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;StopDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/26 23:19:11</td>   <td>30833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.UserCanSearchForProductSuccessfully()[pri:2, instance:tests.SendProductToriendTestCase@14acaea5]">UserCanSearchForProductSuccessfully</td> 
+<tr bgcolor="95b478">  <td>19/10/27 00:20:21</td>   <td>12311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">UserCanSearchForProductSuccessfully</td> 
   <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/26 23:19:04</td>   <td>24260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.UserCanloginSuccessfully()[pri:1, instance:tests.SendProductToriendTestCase@14acaea5]">UserCanloginSuccessfully</td> 
+<tr bgcolor="95b478">  <td>19/10/27 00:20:29</td>   <td>19446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">UserChangeCurrency</td> 
   <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/26 23:19:18</td>   <td>38637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.UserLogOut()[pri:4, instance:tests.SendProductToriendTestCase@14acaea5]">UserLogOut</td> 
-  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:19:11</td>   <td>30833</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
+<tr bgcolor="e8a876">  <td>19/10/27 00:20:29</td>   <td>19446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
 <td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:19:16</td>   <td>36311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
+<tr bgcolor="e8a876">  <td>19/10/27 00:20:30</td>   <td>21013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
 <td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:19:18</td>   <td>38637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/26 23:19:19</td>   <td>39687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/26 23:19:16</td>   <td>36311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.sendToFriend()[pri:3, instance:tests.SendProductToriendTestCase@14acaea5]">sendToFriend</td> 
-  <td>main@258754732</td>   <td></td> </tr>
 </table>
