--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1644268964\testng-customsuite.xml</span>
+                    <span>C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1406144224\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SendProductToriendTestCase" hash-for-method="UserCanSearchForProductSuccessfully">UserCanSearchForProductSuccessfully</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserCanChangeCurrencyTestCase" hash-for-method="UserCanSearchForProductSuccessfully">UserCanSearchForProductSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SendProductToriendTestCase" hash-for-method="UserCanloginSuccessfully">UserCanloginSuccessfully</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SendProductToriendTestCase" hash-for-method="UserLogOut">UserLogOut</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.SendProductToriendTestCase" hash-for-method="sendToFriend">sendToFriend</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserCanChangeCurrencyTestCase" hash-for-method="UserChangeCurrency">UserChangeCurrency</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,7 +125,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.SendProductToriendTestCase</span>
+              <span class="class-name">tests.UserCanChangeCurrencyTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -147,23 +137,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanloginSuccessfully">
-                  </a> <!-- UserCanloginSuccessfully -->
-                  <span class="method-name">UserCanloginSuccessfully</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="UserLogOut">
-                  </a> <!-- UserLogOut -->
-                  <span class="method-name">UserLogOut</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="sendToFriend">
-                  </a> <!-- sendToFriend -->
-                  <span class="method-name">sendToFriend</span>
+                  <a name="UserChangeCurrency">
+                  </a> <!-- UserChangeCurrency -->
+                  <span class="method-name">UserChangeCurrency</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,7 +147,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1644268964\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1406144224\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +156,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.SendProductToriendTestCase&quot;/&gt;
+      &lt;class name=&quot;tests.UserCanChangeCurrencyTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +196,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UserCanloginSuccessfully')
-data.setCell(0, 2, 'tests.SendProductToriendTestCase')
-data.setCell(0, 3, 6573);
+data.setCell(0, 1, 'UserCanSearchForProductSuccessfully')
+data.setCell(0, 2, 'tests.UserCanChangeCurrencyTestCase')
+data.setCell(0, 3, 7119);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'UserCanSearchForProductSuccessfully')
-data.setCell(1, 2, 'tests.SendProductToriendTestCase')
-data.setCell(1, 3, 5478);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'sendToFriend')
-data.setCell(2, 2, 'tests.SendProductToriendTestCase')
-data.setCell(2, 3, 2326);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'UserLogOut')
-data.setCell(3, 2, 'tests.SendProductToriendTestCase')
-data.setCell(3, 3, 1050);
+data.setCell(1, 1, 'UserChangeCurrency')
+data.setCell(1, 2, 'tests.UserCanChangeCurrencyTestCase')
+data.setCell(1, 3, 1567);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,46 +235,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.SendProductToriendTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.UserCanChangeCurrencyTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">Startdriver(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">UserCanloginSuccessfully</span>
-                <span class="method-start">24311 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanloginSuccessfully status=SUCCESS method=SendProductToriendTestCase.UserCanlo...)</span>
-                <span class="method-start">30884 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
                 <span class="method-name">UserCanSearchForProductSuccessfully</span>
-                <span class="method-start">30884 ms</span>
+                <span class="method-start">12329 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=SendProductToriendTestCas...)</span>
-                <span class="method-start">36362 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserCanSearchForProductSuccessfully status=SUCCESS method=UserCanChangeCurrencyTest...)</span>
+                <span class="method-start">19448 ms</span>
               </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">sendToFriend</span>
-                <span class="method-start">36362 ms</span>
+                <span class="method-name">UserChangeCurrency</span>
+                <span class="method-start">19464 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=sendToFriend status=SUCCESS method=SendProductToriendTestCase.sendToFriend()[pri:3,...)</span>
-                <span class="method-start">38688 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">UserLogOut</span>
-                <span class="method-start">38688 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserLogOut status=SUCCESS method=SendProductToriendTestCase.UserLogOut()[pri:4, ins...)</span>
-                <span class="method-start">39738 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserChangeCurrency status=SUCCESS method=UserCanChangeCurrencyTestCase.UserChangeCu...)</span>
+                <span class="method-start">21031 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">39904 ms</span>
+                <span class="method-start">21064 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
