last commit from home

--- a/test-output/old/nopcommerce regression suite/methods-not-run.html
+++ b/test-output/old/nopcommerce regression suite/methods-not-run.html
@@ -1,10 +1,16 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>tests.TestBase.StopDriver</td></tr>
-<tr><td>tests.TestBase.StopDriver</td></tr>
-<tr><td>tests.TestBase.StopDriver</td></tr>
-<tr><td>tests.TestBase.StopDriver</td></tr>
 <tr><td>tests.TestBase.Startdriver</td></tr>
 <tr><td>tests.TestBase.Startdriver</td></tr>
 <tr><td>tests.TestBase.Startdriver</td></tr>
 <tr><td>tests.TestBase.Startdriver</td></tr>
+<tr><td>tests.TestBase.Startdriver</td></tr>
+<tr><td>tests.TestBase.Startdriver</td></tr>
+<tr><td>tests.TestBase.Startdriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
+<tr><td>tests.TestBase.StopDriver</td></tr>
 </table>
