--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>19/10/27 00:20:09</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/27 00:20:21</td>   <td>12311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/27 00:20:29</td>   <td>19446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/27 00:20:29</td>   <td>19446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserCanChangeCurrencyTestCase.UserChangeCurrency()[pri:2, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">UserChangeCurrency</td> 
-  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/27 00:20:30</td>   <td>21013</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/27 00:20:30</td>   <td>21046</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserCanChangeCurrencyTestCase@14acaea5]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@258754732</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="849fce">  <td>19/10/27 16:41:31</td>   <td>18312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.A_UserCanloginSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">A_UserCanloginSuccessfully</td> 
+  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:34</td>   <td>21346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="849fce">  <td>19/10/27 16:41:34</td>   <td>21348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.B_UserCanSearchForProductSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">B_UserCanSearchForProductSuccessfully</td> 
+  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:37</td>   <td>25044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="849fce">  <td>19/10/27 16:41:37</td>   <td>25044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.C_sendToFriend()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">C_sendToFriend</td> 
+  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:40</td>   <td>27141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="849fce">  <td>19/10/27 16:41:40</td>   <td>27142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.D_UserLogOut()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">D_UserLogOut</td> 
+  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:41</td>   <td>28342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:41</td>   <td>28766</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
 </table>
