--- a/test-output/old/nopcommerce regression suite/methods.html
+++ b/test-output/old/nopcommerce regression suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopcommerce regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:19</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterTestCase@523884b2]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="96a48d">  <td>19/10/26 19:23:37</td>   <td>17274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterTestCase@523884b2]">UserCanReguisterSuccessfully</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:43</td>   <td>23677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterTestCase@523884b2]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="f76cb4">  <td>19/10/26 19:23:43</td>   <td>23680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLoginTestCase.UserCanloginSuccessfully()[pri:0, instance:tests.UserLoginTestCase@5b275dab]">UserCanloginSuccessfully</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:45</td>   <td>25758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserLoginTestCase@5b275dab]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="abef66">  <td>19/10/26 19:23:45</td>   <td>25758</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@61832929]">UserCanSearchForProductSuccessfully</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:49</td>   <td>29890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@61832929]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="7996a0">  <td>19/10/26 19:23:49</td>   <td>29890</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@29774679]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:53</td>   <td>33291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@29774679]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="dc63ce">  <td>19/10/26 19:23:53</td>   <td>33291</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@3ffc5af1]">UserCanContactUs</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:54</td>   <td>35098</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="c7c2a6">  <td>19/10/26 19:23:55</td>   <td>35201</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterTestCase@523884b2]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:43:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="7e7986">  <td>19/10/27 16:43:57</td>   <td>45014</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">UserCanReguisterSuccessfully</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:12</td>   <td>59912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="f67b76">  <td>19/10/27 16:44:12</td>   <td>59944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserLoginTestCase.UserCanloginSuccessfully()[pri:0, instance:tests.UserLoginTestCase@66a3ffec]">UserCanloginSuccessfully</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:19</td>   <td>67185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserLoginTestCase@66a3ffec]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="9fba89">  <td>19/10/27 16:44:19</td>   <td>67185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductTestCase.UserCanSearchForProductSuccessfully()[pri:0, instance:tests.UserSearchForProductTestCase@77caeb3e]">UserCanSearchForProductSuccessfully</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:25</td>   <td>73285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductTestCase@77caeb3e]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="b66870">  <td>19/10/27 16:44:25</td>   <td>73286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserSearchForProductAutoTestCase.UserCanSearchForProductAutoCompleteSuccessfully()[pri:0, instance:tests.UserSearchForProductAutoTestCase@1e88b3c]">UserCanSearchForProductAutoCompleteSuccessfully</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:29</td>   <td>77310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserSearchForProductAutoTestCase@1e88b3c]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/10/27 16:44:29</td>   <td>77311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs()[pri:0, instance:tests.ContactUsTestCase@42d80b78]">UserCanContactUs</td> 
+  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:33</td>   <td>81407</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@42d80b78]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>19/10/27 16:44:34</td>   <td>81815</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterTestCase@3e6fa38a]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1555690610</td>   <td></td> </tr>
 </table>
