from work test case add product to cart

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,15 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">nopcommerce regression suite</th></tr>
-<tr><td><a href="#t0">Regression Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">36,415</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">8,720</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">nopcommerce regression suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.ContactUsTestCase</td><td><a href="#m0">UserCanContactUs</a></td><td rowspan="1">1572191069739</td><td rowspan="1">4094</td></tr><tr class="passedodd"><td rowspan="1">tests.UserLoginTestCase</td><td><a href="#m1">UserCanloginSuccessfully</a></td><td rowspan="1">1572191052372</td><td rowspan="1">7238</td></tr><tr class="passedeven"><td rowspan="1">tests.UserRegisterTestCase</td><td><a href="#m2">UserCanReguisterSuccessfully</a></td><td rowspan="1">1572191037442</td><td rowspan="1">14893</td></tr><tr class="passedodd"><td rowspan="1">tests.UserSearchForProductAutoTestCase</td><td><a href="#m3">UserCanSearchForProductAutoCompleteSuccessfully</a></td><td rowspan="1">1572191065714</td><td rowspan="1">4022</td></tr><tr class="passedeven"><td rowspan="1">tests.UserSearchForProductTestCase</td><td><a href="#m4">UserCanSearchForProductSuccessfully</a></td><td rowspan="1">1572191059613</td><td rowspan="1">6098</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.AddProductToCartTestCase</td><td><a href="#m0">AddProductToCart</a></td><td rowspan="1">1572273064553</td><td rowspan="1">1183</td></tr><tr class="passedeven"><td><a href="#m1">UserCanSearchForProductSuccessfully</a></td><td rowspan="1">1572273057044</td><td rowspan="1">7503</td></tr></tbody>
 </table>
-<h2>Regression Test</h2><h3 id="m0">tests.ContactUsTestCase#UserCanContactUs</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.UserLoginTestCase#UserCanloginSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">tests.UserRegisterTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">tests.UserSearchForProductAutoTestCase#UserCanSearchForProductAutoCompleteSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">tests.UserSearchForProductTestCase#UserCanSearchForProductSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.AddProductToCartTestCase#AddProductToCart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">tests.AddProductToCartTestCase#UserCanSearchForProductSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
