--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,26 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.SendProductToriendTestCase</td>
+<td>tests.AddProductToCartTestCase</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>C_sendToFriend</td>
+<td>UserCanSearchForProductSuccessfully</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>D_UserLogOut</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>B_UserCanSearchForProductSuccessfully</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>A_UserCanloginSuccessfully</td>
+<td>AddProductToCart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
