--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:12</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&gt;&gt;Startdriver</td> 
+<tr bgcolor="b6dfcb">  <td>19/10/28 15:30:33</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.AddProductToCartTestCase@3ffc5af1]">&gt;&gt;Startdriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/27 16:41:31</td>   <td>18312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.A_UserCanloginSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">A_UserCanloginSuccessfully</td> 
+<tr bgcolor="849fce">  <td>19/10/28 15:30:57</td>   <td>23250</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductToCartTestCase.UserCanSearchForProductSuccessfully()[pri:1, instance:tests.AddProductToCartTestCase@3ffc5af1]">UserCanSearchForProductSuccessfully</td> 
   <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:34</td>   <td>21346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<tr bgcolor="b6dfcb">  <td>19/10/28 15:31:04</td>   <td>30757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductToCartTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
 <td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/27 16:41:34</td>   <td>21348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.B_UserCanSearchForProductSuccessfully()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">B_UserCanSearchForProductSuccessfully</td> 
+<tr bgcolor="849fce">  <td>19/10/28 15:31:04</td>   <td>30759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddProductToCartTestCase.AddProductToCart()[pri:2, instance:tests.AddProductToCartTestCase@3ffc5af1]">AddProductToCart</td> 
   <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:37</td>   <td>25044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
+<tr bgcolor="b6dfcb">  <td>19/10/28 15:31:05</td>   <td>31944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.AddProductToCartTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
 <td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/27 16:41:37</td>   <td>25044</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.C_sendToFriend()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">C_sendToFriend</td> 
-  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:40</td>   <td>27141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="849fce">  <td>19/10/27 16:41:40</td>   <td>27142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SendProductToriendTestCase.D_UserLogOut()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">D_UserLogOut</td> 
-  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:41</td>   <td>28342</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
-<tr bgcolor="b6dfcb">  <td>19/10/27 16:41:41</td>   <td>28766</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.SendProductToriendTestCase@3ffc5af1]">&lt;&lt;StopDriver</td> 
+<tr bgcolor="b6dfcb">  <td>19/10/28 15:31:05</td>   <td>32085</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.AddProductToCartTestCase@3ffc5af1]">&lt;&lt;StopDriver</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1887813102</td>   <td></td> </tr>
 </table>
