Create read from exl

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sameh\AppData\Local\Temp\testng-eclipse--2102465697\testng-customsuite.xml</span>
+                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse-363916794\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.ContactUsTestCase" hash-for-method="UserCanContactUs(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot)">UserCanContactUs(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserRegisterWith_DTT_PropertiseTestCase" hash-for-method="UserCanReguisterSuccessfully">UserCanReguisterSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,15 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.ContactUsTestCase</span>
+              <span class="class-name">tests.UserRegisterWith_DTT_PropertiseTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanContactUs(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot)">
-                  </a> <!-- UserCanContactUs(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot) -->
-                  <span class="method-name">UserCanContactUs</span>
-                  <span class="parameters">(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot)</span>
+                  <a name="UserCanReguisterSuccessfully">
+                  </a> <!-- UserCanReguisterSuccessfully -->
+                  <span class="method-name">UserCanReguisterSuccessfully</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sameh\AppData\Local\Temp\testng-eclipse--2102465697\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse-363916794\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.ContactUsTestCase&quot;/&gt;
+      &lt;class name=&quot;tests.UserRegisterWith_DTT_PropertiseTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'UserCanContactUs')
-data.setCell(0, 2, 'tests.ContactUsTestCase')
-data.setCell(0, 3, 2846);
+data.setCell(0, 1, 'UserCanReguisterSuccessfully')
+data.setCell(0, 2, 'tests.UserRegisterWith_DTT_PropertiseTestCase')
+data.setCell(0, 3, 6010);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -220,26 +219,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.ContactUsTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.UserRegisterWith_DTT_PropertiseTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">Startdriver(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">UserCanContactUs(meena Antoun, mena@yahoo.com, hello this is my first task and i learn a lot)</span>
-                <span class="method-start">13011 ms</span>
+                <span class="method-name">UserCanReguisterSuccessfully</span>
+                <span class="method-start">10083 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanContactUs status=SUCCESS method=ContactUsTestCase.UserCanContactUs(java.lang...)</span>
-                <span class="method-start">15860 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWith_DTT_PropertiseT...)</span>
+                <span class="method-start">16097 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">15861 ms</span>
+                <span class="method-start">16099 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">18890 ms</span>
+                <span class="method-start">19188 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
