--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e8a876">  <td>19/10/29 22:28:56</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.ContactUsTestCase@59fa1d9b]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985397764</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/10/29 22:29:09</td>   <td>12994</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactUsTestCase.UserCanContactUs(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:tests.ContactUsTestCase@59fa1d9b]">UserCanContactUs</td> 
-  <td>main@985397764</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/29 22:29:12</td>   <td>15844</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.ContactUsTestCase@59fa1d9b]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@985397764</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/29 22:29:12</td>   <td>15844</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.ContactUsTestCase@59fa1d9b]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985397764</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/29 22:29:15</td>   <td>18873</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.ContactUsTestCase@59fa1d9b]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@985397764</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/30 12:00:24</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_PropertiseTestCase@5e5792a0]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="849fce">  <td>19/10/30 12:00:34</td>   <td>10069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWith_DTT_PropertiseTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWith_DTT_PropertiseTestCase@5e5792a0]">UserCanReguisterSuccessfully</td> 
+  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/30 12:00:40</td>   <td>16084</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWith_DTT_PropertiseTestCase@5e5792a0]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/30 12:00:40</td>   <td>16086</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWith_DTT_PropertiseTestCase@5e5792a0]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
+<tr bgcolor="b6dfcb">  <td>19/10/30 12:00:43</td>   <td>19174</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWith_DTT_PropertiseTestCase@5e5792a0]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@485041780</td>   <td></td> </tr>
 </table>
