Create test case with CSV

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1435154305\testng-customsuite.xml</span>
+                    <span>C:\Users\Timo\AppData\Local\Temp\testng-eclipse-1686511402\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserRegisterWith_DTT_ExlFileTestCase" hash-for-method="UserCanReguisterSuccessfully(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123)">UserCanReguisterSuccessfully(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserRegisterWith_DTT_ExlFileTestCase" hash-for-method="UserCanReguisterSuccessfully(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123)">UserCanReguisterSuccessfully(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123)</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tests.UserRegisterWith_DTT_CSVTestCase" hash-for-method="UserCanReguisterSuccessfully">UserCanReguisterSuccessfully</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,23 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.UserRegisterWith_DTT_ExlFileTestCase</span>
+              <span class="class-name">tests.UserRegisterWith_DTT_CSVTestCase</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="UserCanReguisterSuccessfully(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123)">
-                  </a> <!-- UserCanReguisterSuccessfully(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123) -->
+                  <a name="UserCanReguisterSuccessfully">
+                  </a> <!-- UserCanReguisterSuccessfully -->
                   <span class="method-name">UserCanReguisterSuccessfully</span>
-                  <span class="parameters">(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="UserCanReguisterSuccessfully(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123)">
-                  </a> <!-- UserCanReguisterSuccessfully(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123) -->
-                  <span class="method-name">UserCanReguisterSuccessfully</span>
-                  <span class="parameters">(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sameh\AppData\Local\Temp\testng-eclipse--1435154305\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Timo\AppData\Local\Temp\testng-eclipse-1686511402\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.UserRegisterWith_DTT_ExlFileTestCase&quot;/&gt;
+      &lt;class name=&quot;tests.UserRegisterWith_DTT_CSVTestCase&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +184,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'UserCanReguisterSuccessfully')
-data.setCell(0, 2, 'tests.UserRegisterWith_DTT_ExlFileTestCase')
-data.setCell(0, 3, 6481);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'UserCanReguisterSuccessfully')
-data.setCell(1, 2, 'tests.UserRegisterWith_DTT_ExlFileTestCase')
-data.setCell(1, 3, 4729);
+data.setCell(0, 2, 'tests.UserRegisterWith_DTT_CSVTestCase')
+data.setCell(0, 3, 15271);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 15 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,34 +219,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.UserRegisterWith_DTT_ExlFileTestCase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.UserRegisterWith_DTT_CSVTestCase</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">Startdriver(firefox)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">UserCanReguisterSuccessfully(mark, bahig, March, mark11@yahoo.com, Test@123, Test@123)</span>
-                <span class="method-start">12333 ms</span>
+                <span class="method-name">UserCanReguisterSuccessfully</span>
+                <span class="method-start">14586 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWith_DTT_ExlFileTest...)</span>
-                <span class="method-start">18821 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <span class="method-name">UserCanReguisterSuccessfully(hisham, ahmed, April, hisham11@yahoo.com, Test@123, Test@123)</span>
-                <span class="method-start">18821 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWith_DTT_ExlFileTest...)</span>
-                <span class="method-start">23550 ms</span>
+                <span class="method-name">failtestcase([TestResult name=UserCanReguisterSuccessfully status=SUCCESS method=UserRegisterWith_DTT_CSVTestCase...)</span>
+                <span class="method-start">29861 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">WaitAfterClass</span>
-                <span class="method-start">23550 ms</span>
+                <span class="method-start">29864 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-suite after">
                 <span class="method-name">StopDriver</span>
-                <span class="method-start">26588 ms</span>
+                <span class="method-start">32948 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
