--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a18c79">  <td>19/11/02 21:41:23</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">&gt;&gt;Startdriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/02 21:41:49</td>   <td>26577</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">&lt;&lt;StopDriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/11/02 21:41:35</td>   <td>12322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWith_DTT_ExlFileTestCase.UserCanReguisterSuccessfully(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">UserCanReguisterSuccessfully</td> 
-  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/11/02 21:41:42</td>   <td>18810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWith_DTT_ExlFileTestCase.UserCanReguisterSuccessfully(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">UserCanReguisterSuccessfully</td> 
-  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/02 21:41:46</td>   <td>23539</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">&lt;&lt;WaitAfterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/02 21:41:42</td>   <td>18810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
-<tr bgcolor="a18c79">  <td>19/11/02 21:41:46</td>   <td>23539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWith_DTT_ExlFileTestCase@47c62251]">&lt;&lt;failtestcase</td> 
-<td>&nbsp;</td>  <td>main@795372831</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>19/11/03 10:38:41</td>   <td>0</td> <td title="&gt;&gt;TestBase.Startdriver(java.lang.String)[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&gt;&gt;Startdriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>19/11/03 10:39:14</td>   <td>32932</td> <td title="&lt;&lt;TestBase.StopDriver()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;StopDriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="a18c79">  <td>19/11/03 10:38:56</td>   <td>14569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegisterWith_DTT_CSVTestCase.UserCanReguisterSuccessfully()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">UserCanReguisterSuccessfully</td> 
+  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>19/11/03 10:39:11</td>   <td>29847</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.WaitAfterClass()[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;WaitAfterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
+<tr bgcolor="f4a68b">  <td>19/11/03 10:39:11</td>   <td>29846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.failtestcase(org.testng.ITestResult)[pri:0, instance:tests.UserRegisterWith_DTT_CSVTestCase@343f4d3d]">&lt;&lt;failtestcase</td> 
+<td>&nbsp;</td>  <td>main@764577347</td>   <td></td> </tr>
 </table>
