--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">14,942</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">18,306</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.UserRegisterWith_DTT_ExlFileTestCase</td><td><a href="#m0">UserCanReguisterSuccessfully</a></td><td rowspan="2">1572723695645</td><td rowspan="2">6481</td></tr><tr class="passedeven"><td><a href="#m1">UserCanReguisterSuccessfully</a></td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.UserRegisterWith_DTT_CSVTestCase</td><td><a href="#m0">UserCanReguisterSuccessfully</a></td><td rowspan="1">1572773936503</td><td rowspan="1">15271</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">tests.UserRegisterWith_DTT_ExlFileTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>mark</td><td>bahig</td><td>March</td><td>mark11@yahoo.com</td><td>Test@123</td><td>Test@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.UserRegisterWith_DTT_ExlFileTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th><th>Parameter #6</th></tr><tr class="param stripe"><td>hisham</td><td>ahmed</td><td>April</td><td>hisham11@yahoo.com</td><td>Test@123</td><td>Test@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">tests.UserRegisterWith_DTT_CSVTestCase#UserCanReguisterSuccessfully</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
